[package]
name = "zbfill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"
serde_json = "1.0"
anyhow = "1.0"
crc = "1"
rand = "0.8"
rand_chacha = "0.3"
rand_hc = "0.3"
